src/main/webapp/static/themes/light/modules/_lecture.scss
@use "sass:math";

.o_lecture_authorized_absence {
	div.form-inline {
		display: inline;
	}
}

.o_lectures_teacher_overview {
	.o_table_wrapper.o_table_flexi .table {
		margin-top: 0;
		/* make cells with fixed width as small as possible */
		thead {
			th.o_col_date,
			th.o_col_startTime,
			th.o_col_endTime,
			th.o_col_details,
			th.o_col_tools {
				width: 1%;
			}
		
		}
	}
	.o_lectures_current_wrapper {
		border: 1px solid $o-lm-current-border-color;
		background: $o-lm-current-bg;
		border-radius: $o-lm-current-border-radius;
		margin: 10px -10px 20px -10px;
		padding: 10px;	
		
		.o_button_group {
			margin-bottom: 0;
		}
	}
	.o_lectures_teacher_search .o_form .o_date {
		padding-right: 10px;
		position: relative;
	}
	
	.o_lectures_teacher_search div.o_chelp_wrapper_and_buttons {
		position: absolute;
		top: 0;
		right: 0;
	}
}

.o_header_with_buttons .o_day_chooser {
	position: relative;
	float: right;
}

.o_lectures_rollcall {
	legend {
		margin-bottom: 10px;
	}	
	
	.o_desc, .o_note, .o_preparation {
		margin: 0;
	}
	
}

.o_rollcall_next_previous_group {
	text-align: center;
	
	a.o_sel_close {
		float:left;
		
		span {
			display: none;
		}
	}

	.form-control {
		display: inline;
		width: auto;
	}
	
	@media (max-width: $screen-xs-max) { 
		a span {
			display: none;
		}	
	}
}

.o_lecture_free {
	color: $text-muted;
}

.o_lectures div#o_main_toolbar.o_toolbar {
	margin-top: 0px;
}

.o_sel_absence_lectures_table table>tbody>tr.o_lecture_warning,
.o_sel_absence_lectures_table table>tbody>tr.o_lecture_warning>td.o_col_sticky_left,
.o_sel_absence_lectures_table table>tbody>tr.o_lecture_warning>td.o_col_sticky_right {
	background-color: $alert-warning-bg !important;
}

.o_labeled_light {
	&.o_lecture_status_planned,
	&.o_lecture_status_next {
		font-weight: normal;
		@extend %o_labeled_light_blue;
	}
	&.o_lecture_status_active,
	&.o_lecture_status_running {
		font-weight: normal;
		@extend %o_labeled_light_orange;
	}
	&.o_lecture_status_cancelled {
		font-weight: normal;
		@extend %o_labeled_light_grey;
	}
	&.o_lecture_rollcall_status_open {
		font-weight: normal;
		@extend %o_labeled_light_blue;
	}
	&.o_lecture_rollcall_status_reopen {
		font-weight: normal;
		@extend %o_labeled_light_red;
	}
	&.o_lecture_status_done,
	&.o_lecture_rollcall_status_closed,
	&.o_lecture_rollcall_status_autoclosed {
		font-weight: normal;
		@extend %o_labeled_light_brown;
	}
}

.o_button_group>.o_lecture_badge {
	display: inline-block;
	margin-left: 7px;
	
	.o_labeled_light {
		margin: 0 0 0 0em;
		font-size: 100%;
	}
}

.o_lecture_card {
	height: 100%;
	min-width: 100%;
	
	.o_card_title > small {
		display: block;
	}
	
	.o_card_meta {
		padding: 10px;
	}
	
	.o_lecture_file_img {
		height: 133px;
		
		>img {
			display: block;
  			object-fit: cover;
			width: 100%;
			height: 133px;
		}
	}
	
	.o_visual_not_available {
		height: 133px;
		background: $o-not-available-bg;
		background-repeat:no-repeat;
		background-position:50% 50%;	
		background-size: contain;
	}
	
	&.o_card .o_card_radio_select {
		line-height: 1em;
	}
}

.o_lecture_resources {
	display: grid;
	grid-template-columns: calc(33% - 10px) calc(33% - 10px) calc(34% - 20px);
	column-gap: 20px;
	row-gap: 10px;
	justify-items: stretch;
	
	label {
		grid-column: 1 / -1;
	}
	
	.o_lecture_resource, .o_empty_panel, .o_user_info_profile {
		height: 82px;
	}
	
	.o_user_info_profile {
		background-color: #fff;
		width: 100%;
	}
	
	.o_empty_panel {
		border: $o-user-info-border;
	}
	
	label.o_lecture_course {
		margin-top: 15px;
	}
	
	.o_lecture_course_card {
		display: grid;
		grid-template-columns: 112px 1fr auto;
		gap: 10px;
		padding: 5px;
		border: $o-curriculum-widget-card-border;
		border-radius: $o-curriculum-widget-card-border-radius;
		background-color: #fff;
		
		.o_thumbnail, .o_visual_not_available {
			width: 112px;
			height: 75px;
			
			img {
				max-width: 112px;
				max-height: 112px;
			}
		}
		
		.o_visual_not_available {
			background: $o-not-available-bg;
			background-repeat:no-repeat;
			background-position:50% 50%;		
			background-size: contain;
		}
		
		.o_thumbnail_file_img {
			width: 112px;
			height: 75px;
		
			display: flex;
			justify-content: center;
			align-items: center;
			overflow: hidden;
		}
		
		.o_card_meta {
			display: flex;
			flex-direction: column;
			justify-content: start;
			
			.o_card_title {
				margin: 2px 0 0 0;
			}
			
			h4 ~ small {
				order: 1;
			}
			
			> * {
				order: 2;
			}
		}
	}
}

@media (max-width: $screen-sm-max) {
	.o_lecture_resources {
		grid-template-columns: 50% 50%;
	}
}

@media (max-width: $screen-xs-max) {
	.o_lecture_resources {
		grid-template-columns: 100%;
	}
}

.o_lecture_courses_selection {
	.o_table_row.row {
		margin: 0;
	}
}

.o_lecture_excluded {
	color: $o-lm-excluded-color;
}

.o_lectures_list>h2, .o_lectures_list>h3 {
	margin-top: 0;
}

.o_curriculum_lectures_statistics {
	.table {
		width: auto;
		
		.o_progress_statistics {
			display: inline-block;
			min-width: 300px;
		}
	}
	ul {
		padding-left: 1em; 
	}

	ul li {
		display: inline-block;
		padding-right: 2em; 
	}
}

.o_lectures_timeline {
	.o_lectures_timeline_rows {
		display: flex;
		flex-direction: column;
		gap: $o-lm-timeline-rows-gap;
		.o_lectures_timeline_row {
			background-color: $o-lm-timeline-row-bg;
			border-radius: $o-lm-timeline-row-border-radius;
			
			display: flex;
			
			.o_lectures_timeline_year {
				display: flex;
				align-items: center;
				h5 {
					font-size: $font-size-h4;
					font-weight: bold;
				}
			}
			.o_lectures_timeline_day {
				padding: $o-lm-timeline-row-padding;
				min-width: $o-lm-timeline-day-width;
				
				display: flex;
				flex-direction: column;
				align-items: center;
				justify-content: center;
				
				.o_lectures_timeline_day_name {
					font-size: 14px;
					font-weight: 500;
					line-height: 1;
				}
				.o_lectures_timeline_day_number {
					font-size: 36px;
					font-weight: 500;
					line-height: 1;
				}
				.o_lectures_timeline_month_name {
					font-size: 14px;
					font-weight: 500;
					line-height: 1;
					text-transform: uppercase;
				}
			}
			
			.o_lectures_timeline_path_lectures {
				display: flex;
				flex-direction: column;
				
				.o_lectures_timeline_path_lecture {
					display: flex;
					height: 100%;
				}
				
				>.o_lectures_timeline_path_lecture:last-child {
					.o_lectures_timeline_lecture {
						>div:last-child {
							// If lecture is smaller than the day
							margin-bottom: $o-lm-timeline-row-padding;
						}
					}
				}
			}
			
			.o_lectures_timeline_path {
				width: $o-lm-timeline-path-width	;
				min-width: $o-lm-timeline-path-width	;
				
				display: flex;
				flex-direction: column;
				
				.o_lectures_timeline_path_top,
				.o_lectures_timeline_path_bottom {
					border-left: $o-lm-timeline-path-stroke-width solid $o-lm-timeline-path-color;
					transform: translateX(1rem);
				}
				.o_lectures_timeline_path_top {
					height: $o-lm-timeline-path-top-height;
				}
				.o_lectures_timeline_path_center 	{
					border: $o-lm-timeline-path-stroke-width solid $o-lm-timeline-path-color;
					border-radius: 99999px; // circle
					width: 2rem;
					height: 2rem;
					margin-left: math.div($o-lm-timeline-path-stroke-width, 2);
				}
				.o_lectures_timeline_path_bottom {
					flex-grow: 2;
				}
			}
			
			.o_lectures_timeline_lecture {
				padding-right: $o-lm-timeline-row-padding;
				
				display: flex;
				flex-direction: column;
				
				.o_lectures_timeline_lectures_top {
					height: ($o-lm-timeline-path-top-height - 2px);
				}
				.o_lectures_timeline_title {
					font-size: 18px;
					line-height: 1.5;
				}
				.o_lectures_timeline_day_time,
				.o_lectures_timeline_location {
					font-size: 14px;
					line-height: 1.5;
				}
			}
		}
		
		// Do not show a path before the first event (first child = year)
		>.o_lectures_timeline_row:nth-child(2) {
			.o_lectures_timeline_path_lecture:first-child {
				.o_lectures_timeline_path {
					.o_lectures_timeline_path_top {
						border-left: none;
					}
				}
			}
		}
		// Do not show a path before the last event if complete timeline is displayed
		&.o_lectures_timeline_complete >.o_lectures_timeline_row:last-child {
			.o_lectures_timeline_path_lecture:last-child {
				.o_lectures_timeline_path {
					.o_lectures_timeline_path_bottom {
						border-left: none;
					}
				}
			}
		}
	}
}


.o_lecture_details {
	container-type: inline-size;
	container-name: o-lecture-details;
}


.o_lecture_subjects_edit {
	display: flex;
	flex-direction: row;

	.o_taxonomy_levels {
		flex-grow: 1;

		.btn {
			border-top-right-radius: 0;
			border-bottom-right-radius: 0;
		}
	}

	.o_adopt .btn {
		height: 100%;
		display: flex;
		align-items: center;
		border-top-left-radius: 0;
		border-bottom-left-radius: 0;
		border-left-width: 0;
	}
}

@container o-lecture-details (max-width: 820px) {
	.o_lecture_resources {
		grid-template-columns: calc(50% - 10px) calc(50% - 10px);
	}
}

.o_lecture_details .o_lecture_descs {
	margin-top: 1em;
	
	.form-group:last-child {
		margin-bottom: 10px;
	}
	.form-control-static {
		padding-bottom: 0;
		padding-top: 4px;
	}
	.control-label {
		margin-bottom: -2px;
	}
}

.o_table_row_details {
	.o_lecture_details .o_actions {
		display: none;
	}
	
	.o_lecture_details_edit {
		margin-left: 7px;
	}
}

.o_vertical_timeline_item_details .o_lecture_details {
	.o_header_with_buttons {
		display: none;
	}
	
	.o_actions {
		margin-left: auto;
	}
	
	@media (max-width: $screen-sm-max) {
		.o_metadata_horizontal {
			flex-direction: column;
		}
	}
}

.o_lecture_timeline_details, .o_lecture_details {
	h3 {
		>span {
			display: flex;
			flex-direction: column;
		
			small {
				order: -1;
				padding-bottom: 5px;
			}
		}
	}
}

.o_lecture_timeline_details {
	.o_lecture_timeline_details_actions {
		text-align: right;
	}
	.o_lead_followup_times {
		padding-left: 2em;
	}
}

.o_table_wrapper.o_table_flexi.o_vertical_timeline  {
	.o_vertical_timeline_item.o_lecture_running .o_vertical_timeline_item_content {
		border-left: 3px solid $o-lm-table-timeline-running-border-color;
		background-color: $o-lm-table-timeline-running-bg-color;
	}
	
	.o_vertical_timeline_item.o_lecture_next .o_vertical_timeline_item_content {
		border-left: 3px solid $o-lm-table-timeline-next-border-color;
		background-color: $o-lm-table-timeline-next-bg-color;
	}
}

/* Edit */
.o_lecture_date_planned >.col-sm-12,
.o_lecture_date_planned .col-sm-8,
.o_lecture_date_planned .col-sm-4 {
	padding-right: 0;
	padding-left: 0;
}

